fix: increase z-index

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
 .nprogress {
   pointer-events: none;
+  z-index: 99999;
 }
 
 .nprogress .bar {
   background: #29d;
 
   position: fixed;
-  z-index: 1031;
+  z-index: 99999;
   top: 0;
   left: 0;
 
